@@ -751,7 +751,9 @@ background-image:url(images/right-banner.gif);
 .top-right {background-image:url(images/top-right.gif);}
 
 .important {
-    background-image : url(images/important.gif);
+    /* background-image : url(images/important.gif); */
+    color: red;
+    font-weight: bold;
     padding-left:1px;
     padding-right:1px;
     padding-top:3px;
