@@ -897,7 +897,9 @@ a:hover {
 }
 
 .important {
-    background-image : url(images/important.gif);
+    /* background-image : url(images/important.gif); */
+    color: red;
+    font-weight: bold;
     padding-left:1px;
     padding-right:1px;
     padding-top:3px;
